# Action-Sudoku-Game

./: CMakeLists.txt  GameApp.cpp  GameApp.h  README.md  main.cpp  pch.h
GameLib/: Board.cpp  Board.h  CMakeLists.txt  CheckIsContainerVisitor.cpp  CheckIsContainerVisitor.h  CheckIsNumberVisitor.cpp  CheckIsNumberVisitor.h  CheckIsPotionVisitor.cpp  CheckIsPotionVisitor.h  CheckIsXRayVisitor.cpp  CheckIsXRayVisitor.h  Container.cpp  Container.h  DeclaractionXray.cpp  DeclaractionXray.h  Declaration.cpp  Declaration.h  DeclarationContainer.cpp  DeclarationContainer.h  DeclarationNumber.cpp  DeclarationNumber.h  DeclarationPotion.cpp  DeclarationPotion.h  DeclarationSparty.cpp  DeclarationSparty.h  DeclarationXray.cpp  DeclarationXray.h  FpsDisplay.cpp  FpsDisplay.h  Game.cpp  Game.h  GameView.cpp  GameView.h  Item.cpp  Item.h  ItemVisitor.cpp  ItemVisitor.h  Level.cpp  Level.h  MainFrame.cpp  (+15 more)
Tests/: BoardTest.cpp  CMakeLists.txt  EmptyTest.cpp  ItemTest.cpp  LoadTest.cpp  ScoreboardTest.cpp  SpartyTest.cpp  gtest_main.cpp
levels/: level3.xml
